added user sections history
